# neonatal_esp32

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  comon.h  main.c
main/hardware/files/: fs_manager.c  fs_manager.h
main/hardware/humidity/: humidity.c  humidity.h
main/hardware/temperature/: temperature.c  temperature.h
main/tasks/alert/: alert.c  alert.h
main/tasks/application/: application.c  application.h
main/tasks/espnow_manager/: espnow_manager.c  espnow_manager.h
main/tasks/humidifier/: humidifier.c  humidifier.h
main/tasks/resistance/: resistance.c  resistance.h
