idf_component_register(
    SRCS
        "main.c"
        "hardware/files/fs_manager.c"
        "hardware/humidity/humidity.c"
        "hardware/humidity/aht.c"
        "hardware/temperature/temperature.c"
        "hardware/temperature/ds18x20.c"
        "assistant/onewire.c"
        "assistant/i2cdev_legacy.c"
        "tasks/application/application.c"
        "tasks/humidifier/humidifier.c"
        "tasks/resistance/resistance.c"

    INCLUDE_DIRS
        "."
        "hardware"
        "hardware/files"
        "hardware/humidity"
        "hardware/temperature"
        "assistant"
        "tasks"
        "tasks/application"
        "tasks/humidifier"
        "tasks/resistance"
)
